NativeMethods.g.cs


        [DllImport(__DllName, EntryPoint = "__quiche_put_varint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_put_varint(byte* buf, nuint buf_len, ulong val);

        [DllImport(__DllName, EntryPoint = "__quiche_get_varint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_get_varint(byte* buf, nuint buf_len, ulong* val);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_config_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern H3Config* quiche_h3_config_new();

        [DllImport(__DllName, EntryPoint = "__quiche_h3_config_set_max_field_section_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_set_max_field_section_size(H3Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_config_set_qpack_max_table_capacity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_set_qpack_max_table_capacity(H3Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_config_set_qpack_blocked_streams", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_set_qpack_blocked_streams(H3Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_config_enable_extended_connect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_enable_extended_connect(H3Config* config, [MarshalAs(UnmanagedType.U1)] bool enabled);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_config_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_config_free(H3Config* config);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_conn_new_with_transport", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern H3Conn* quiche_h3_conn_new_with_transport(Conn* quiche_conn, H3Config* config);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_conn_poll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_h3_conn_poll(H3Conn* conn, Conn* quic_conn, H3Event** ev);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_event_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_event_type(H3Event* ev);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_event_for_each_header", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_event_for_each_header(H3Event* ev, delegate* unmanaged[Cdecl]<byte*, nuint, byte*, nuint, void*, int> cb, void* argp);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_for_each_setting", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_for_each_setting(H3Conn* conn, delegate* unmanaged[Cdecl]<ulong, ulong, void*, int> cb, void* argp);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_event_headers_has_body", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_h3_event_headers_has_body(H3Event* ev);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_extended_connect_enabled_by_peer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_h3_extended_connect_enabled_by_peer(H3Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_event_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_event_free(H3Event* ev);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_send_request", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_h3_send_request(H3Conn* conn, Conn* quic_conn, H3Header* headers, nuint headers_len, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_send_response", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_response(H3Conn* conn, Conn* quic_conn, ulong stream_id, H3Header* headers, nuint headers_len, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_send_response_with_priority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_response_with_priority(H3Conn* conn, Conn* quic_conn, ulong stream_id, H3Header* headers, nuint headers_len, H3Priority* priority, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_send_body", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_h3_send_body(H3Conn* conn, Conn* quic_conn, ulong stream_id, byte* body, nuint body_len, [MarshalAs(UnmanagedType.U1)] bool fin);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_recv_body", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_h3_recv_body(H3Conn* conn, Conn* quic_conn, ulong stream_id, byte* @out, nuint out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_send_goaway", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_goaway(H3Conn* conn, Conn* quic_conn, ulong id);

        /// <summary>
        ///  Sends a PRIORITY_UPDATE frame on the control stream with specified
        ///  request stream ID and priority.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "__quiche_h3_send_priority_update_for_request", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_send_priority_update_for_request(H3Conn* conn, Conn* quic_conn, ulong stream_id, H3Priority* priority);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_take_last_priority_update", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_h3_take_last_priority_update(H3Conn* conn, ulong prioritized_element_id, delegate* unmanaged[Cdecl]<byte*, ulong, void*, int> cb, void* argp);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_dgram_enabled_by_peer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_h3_dgram_enabled_by_peer(H3Conn* conn, Conn* quic_conn);

        [DllImport(__DllName, EntryPoint = "__quiche_h3_conn_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_h3_conn_free(H3Conn* conn);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct sockaddr
    {
        public int ss_family;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct sockaddr_storage
    {
        public int ss_family;
        public fixed byte data[64];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct timespec
    {
        public long tv_sec;
        public long tv_nsec;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct Config
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct Conn
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct RecvInfo
    {
        public sockaddr* from;
        public int from_len;
        public sockaddr* to;
        public int to_len;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SendInfo
    {
        public sockaddr_storage from;
        public int from_len;
        public sockaddr_storage to;
        public int to_len;
        public timespec at;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct StreamIter
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct ConnIdIter
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct Stats
    {
        public nuint recv;
        public nuint sent;
        public nuint lost;
        public nuint retrans;
        public ulong sent_bytes;
        public ulong recv_bytes;
        public ulong acked_bytes;
        public ulong lost_bytes;
        public ulong stream_retrans_bytes;
        public nuint paths_count;
        public ulong reset_stream_count_local;
        public ulong stopped_stream_count_local;
        public ulong reset_stream_count_remote;
        public ulong stopped_stream_count_remote;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct TransportParams
    {
        public ulong peer_max_idle_timeout;
        public ulong peer_max_udp_payload_size;
        public ulong peer_initial_max_data;
        public ulong peer_initial_max_stream_data_bidi_local;
        public ulong peer_initial_max_stream_data_bidi_remote;
        public ulong peer_initial_max_stream_data_uni;
        public ulong peer_initial_max_streams_bidi;
        public ulong peer_initial_max_streams_uni;
        public ulong peer_ack_delay_exponent;
        public ulong peer_max_ack_delay;
        [MarshalAs(UnmanagedType.U1)] public bool peer_disable_active_migration;
        public ulong peer_active_conn_id_limit;
        public nint peer_max_datagram_frame_size;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct PathStats
    {
        public sockaddr_storage local_addr;
        public int local_addr_len;
        public sockaddr_storage peer_addr;
        public int peer_addr_len;
        public nint validation_state;
        [MarshalAs(UnmanagedType.U1)] public bool active;
        public nuint recv;
        public nuint sent;
        public nuint lost;
        public nuint retrans;
        public ulong rtt;
        public nuint cwnd;
        public ulong sent_bytes;
        public ulong recv_bytes;
        public ulong lost_bytes;
        public ulong stream_retrans_bytes;
        public nuint pmtu;
        public ulong delivery_rate;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct PathEvent
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SocketAddrIter
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct H3Config
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct H3Conn
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct H3Event
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct H3Header
    {
        public byte* name;
        public nuint name_len;
        public byte* value;
        public nuint value_len;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct H3Priority
    {
        public byte urgency;
        [MarshalAs(UnmanagedType.U1)] public bool incremental;
    }



}
